<resources>
    <string name="app_name">租小二</string>
    <string name="kefu">010-85270315</string>
    <string name="zhanghao">付款账号</string>
    <string name="kefuphone">01085270315</string>
    <string name="no">暂无数据</string>
    <string name="skip">跳过</string>
    <string name="no_login">未登录，请先登录</string>
    <string name="app_exit">再次点击将退出程序</string>
    <string name="phone_nonull">手机号不能为空</string>
    <string name="fourg">  4G   </string>
    <string name="eig">  128G  </string>
    <string name="fi">  5.1寸</string>
    <string name="twog">256G</string>
    <string name="sixg">64G</string>
    <string name="newphone">新机体验</string>
    <string name="tongzhi">通知</string>
    <string name="first">首页</string>
    <string name="fenlei">分类</string>
    <string name="my">我的</string>
    <string name="im_in">立即进入</string>
    <string name="yaojin">*设备押金：</string>
    <string name="zongzujin">*总租金：</string>
    <string name="color">颜色</string>
    <string name="rongliang">容量</string>
    <string name="zuqi">租期/天</string>
    <string name="shuliang">数量/台</string>
    <string name="fuwu">*服务：免费维修，专业团队随时待命，24小时客服电话，企业免押金</string>
    <string name="location_shousuo">城市名,拼音首字母......</string>
    <string name="gedcode_sucess">验证码发送成功</string>
    <string name="gedcode_fual">验证码发送失败</string>
    <string name="app_froget_password">重置密码</string>
    <string name="no_responce">服务器异常，请稍后重试</string>
    <string name="app_regist">注册</string>
    <string name="add_addresss">添加新地址</string>
    <string name="app_hint_phone">请输入手机号</string>
    <string name="app_hint_code">请输入验证码</string>
    <string name="app_hint_password">请输入密码</string>
    <string name="app_getcode">获取验证码</string>
    <string name="app_regist_text">立即注册</string>
    <string name="app_regist_button_text">登录或注册即同意租小二</string>
    <string name="app_regist_service_text">《用户服务协议》</string>
    <string name="app_login">登录</string>
    <string name="app_login_text">立即登录</string>
    <string name="no_code">收不到验证码？试试</string>
    <string name="pass_login">密码登录</string>
    <string name="pass_ba">吧</string>
    <string name="or">   —   OR —   </string>
    <string name="app_pass_login">登录</string>
    <string name="froget_pass">忘记密码?</string>
    <string name="code_login">验证码登录</string>
    <string name="merchant_entry">商家入驻</string>
    <string name="wall_text">我的钱包</string>
    <string name="mydata_text">我的资料</string>
    <string name="identity_text">身份认证</string>
    <string name="invoice_text">我的发票</string>
    <string name="release_text">我的发布</string>
    <string name="receiv_address">收货地址</string>
    <string name="inviting_friends">邀请好友</string>
    <string name="contacct_customer">联系客服</string>
    <string name="invoice">发票</string>
    <string name="creat_time">创建时间：</string>
    <string name="setting">设置</string>
    <string name="message_open">新信息提醒</string>
    <string name="cler">清除缓存</string>
    <string name="check_version">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="out_login">退出登录</string>
    <string name="out_login_success">退出登录成功</string>
    <string name="resetting">立即重置</string>
    <string name="myorder">我的订单</string>
    <string name="my_order">我的订单</string>
    <string name="my_equipment">我的设备</string>
    <string name="my_repair">维修售后</string>
    <string name="order_all">全部</string>
    <string name="order_completed_all">已完成</string>
    <string name="order_goodreceived">待收货</string>
    <string name="order_pendingdelivery">待发货</string>
    <string name="order_pendingpayment">待付款</string>
    <string name="heise">黑色</string>
    <string name="yinse">银色</string>
    <string name="jinse">金色</string>
    <string name="my_data_title">个人资料</string>
    <string name="my_data_im_text">头像</string>
    <string name="my_data_name_text">昵称</string>
    <string name="my_data_phone_text">手机号</string>
    <string name="my_data_sex_text">性别</string>
    <string name="my_data_age_text">生日</string>
    <string name="my_data_nl_text">年龄</string>
    <string name="my_data_wechat_text">绑定微信</string>
    <string name="my_data_wechat_no_text">绑定微信</string>
    <string name="my_data_industry_text">行业</string>
    <string name="my_data_industry_text_">互联网</string>
    <string name="my_data_company_text">公司</string>
    <string name="my_data_company_text_">北京互联网公司</string>
    <string name="my_data_position_text">职位</string>
    <string name="my_data_position_text_">职位</string>
    <string name="my_invoice">我的发票</string>
    <string name="my_eq">我的设备</string>
    <string name="my_maintentsnce">维修售后</string>
    <string name="type_">[机型]</string>
    <string name="my_address">我的收货地址</string>
    <string name="my_rel">我的发布</string>
    <string name="my_rel_finish">已完成</string>
    <string name="one">先拍人相面</string>
    <string name="two">再拍国徽面</string>
    <string name="three_">拍摄手持身份证照片</string>
    <string name="id_tv">身份证认证</string>
    <string name="shebaoka">社保卡</string>
    <string name="gudingzichan">固定资产</string>
    <string name="weituo_id">委托人身份证</string>
    <string name="weituo_book">委托书</string>
    <string name="faren_id">法人身份证</string>
    <string name="yingyezhizhao">营业执照</string>
    <string name="student_renzheng">学生认证</string>
    <string name="zhima">芝麻信用</string>
    <string name="please_input_name">请输入收货人名字</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_apart">请选择区域</string>
    <string name="please_input_address">请输入详细地址</string>
    <string name="please_input_address_after">请填写信息再后提交</string>
    <string name="hot_rent_list">热租榜单</string>
    <string name="hot_rent_list_more">更多</string>
    <string name="fruit_and_powder">果粉热区</string>
    <string name="hot_national_machine">热门国机</string>
    <string name="office_selection">办公精选</string>
    <string name="my_wall_title">我的钱包</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="present_record">提现记录</string>
    <string name="account_record">到账记录</string>
    <string name="present_progress">提现进度</string>
    <string name="name_address">王先生</string>
    <string name="ed">编辑</string>
    <string name="moren">默认</string>
    <string name="balance">我的余额（元）</string>
    <string name="recently_estimated_price">最近估机价格</string>
    <string name="recent_detection_price">最近检测价格 </string>
    <string name="immediate_cash">立即提现</string>
    <string name="about_us_title">关于我们</string>
    <string name="about_us_cotext">关于我们标语</string>
    <string name="user_user_protocol">《租小二用户协议》</string>
    <string name="company_name">北京千百亿科技发展有限公司</string>
    <string name="add_bank_card_title">添加银行卡</string>
    <string name="setting_title">设置</string>
    <string name="receive_new_messages">接收新消息</string>
    <string name="voice">声音</string>
    <string name="new_message_hints">新消息提示音</string>
    <string name="shock">震动</string>
    <string name="title">标题</string>
    <string name="title_hint">品牌品类型号更容易被买家搜索到</string>
    <string name="title_sousou">搜索</string>
    <string name="act_wrap_sousou">历史搜索</string>
    <string name="remen_sousou">热门搜索</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="bind_your_bank_card">请绑定您的银行卡</string>
    <string name="the_name_of_the_cardholder">持卡人姓名：</string>
    <string name="bank_card_number">银行卡卡号：</string>
    <string name="bt_bind_cord">下一步</string>
    <string name="activity">活动</string>
    <string name="phone">手机号</string>
    <string name="phone_num">188****888</string>
    <string name="change_phone_num">更换手机号</string>
    <string name="phone_num_title">手机号</string>
    <string name="exchange">更换手机号</string>
    <string name="code">验证码</string>
    <string name="no_getcode">收不到验证码？试一试密码更换吧！请</string>
    <string name="password_change">输入密码</string>
    <string name="password">密码</string>
    <string name="name">姓名</string>
    <string name="id_card">身份证号</string>
    <string name="id_card_au">身份证认证</string>
    <string name="confirm_the_replacement">确认更换</string>
    <string name="personal_nickname">个人昵称</string>
    <string name="company_nickname">公司昵称</string>
    <string name="save">保存</string>
    <string name="set_head">设置头像</string>
    <string name="photo_upload">拍照上传</string>
    <string name="photo_file">相册选择</string>
    <string name="select_indeustry_information">选择行业信息</string>
    <string name="phone_title">手机</string>
    <string name="screen">筛选</string>
    <string name="boy">男</string>
    <string name="gril">女</string>
    <string name="cancal">取消</string>
    <string name="dentity_authen">身份认证</string>
    <string name="id_card_authon">身份证认证</string>
    <string name="jingxuan">精选</string>
    <string name="myname">我是昵称</string>
    <string name="water_drop_credit">水滴信用</string>
    <string name="product_details">产品详情</string>
    <string name="receiving_address">收货地址</string>
    <string name="receiving_man">收货人：</string>
    <string name="receiving_man_phone">手机号：</string>
    <string name="address">所在地区：</string>
    <string name="hint_address">详细地址：如街道、门牌、小区、楼栋号、单元室等</string>
    <string name="hint_p">描述下商品使用感受吧</string>
    <string name="default_address">默认地址</string>
    <string name="dele_defalt_address">删除地址</string>
    <string name="save_address">保存地址</string>
    <string name="pay_success">支付成功</string>
    <string name="seller_has_shipped">卖家已发货</string>
    <string name="address_">北京市中关村中心大街8号楼303室</string>
    <string name="receiving_address_">收货地址:</string>
    <string name="tv_good">数量</string>
    <string name="tv_good_num">一台</string>
    <string name="tv_payment_totalsl">付款总计</string>
    <string name="tv_payment_totalsl_num">¥9792.00</string>
    <string name="bt_view_details_order">查看订单详情</string>
    <string name="details_invoice">发票详情</string>
    <string name="invoice_status">发票状态:</string>
    <string name="invoice_finish">已开票</string>
    <string name="order_number">订单编号：</string>
    <string name="order_number_num">712666888888999</string>
    <string name="order_time">下单时间：</string>
    <string name="order_number_time">2018-07-10  15:30:26 </string>
    <string name="order_type">发票类型：</string>
    <string name="order_type_tv">电子普通发票</string>
    <string name="invoice_head">发票抬头：</string>
    <string name="invoice_heads">发票抬头</string>
    <string name="invoice_info">收票人信息</string>
    <string name="invoice_head_tv">公司名字</string>
    <string name="taxpayer_identification">纳税人识别号：</string>
    <string name="taxpayer_identification_tv">123243345446565657</string>
    <string name="invoices_raised">发票抬头：</string>
    <string name="invoices_raised_tv">商品明细</string>
    <string name="refund_application">退款申请</string>
    <string name="product_name">Apple iphoneX 64G 黑色</string>
    <string name="product_names">Apple iphoneX</string>
    <string name="product_info">规格：</string>
    <string name="product_info_tv">黑色 64G * 1台</string>
    <string name="tv_lease_mons">租期截止：</string>
    <string name="tv_lease_mons_tv">2019-07-08</string>
    <string name="ser">服务：</string>
    <string name="first_time">首发时间：</string>
    <string name="first_time_tv">2019-10-6</string>
    <string name="ser_tv">企业免押金,免费维修</string>
    <string name="check_login">点击登录</string>
    <string name="lease_term">租期：</string>
    <string name="lease_month">12个月</string>
    <string name="lease_mon">租金：</string>
    <string name="lease_mons">月租金：</string>
    <string name="lease_money">316.00/月</string>
    <string name="lease_moneys">￥316.00</string>
    <string name="lease_moneys_">￥316.00/天</string>
    <string name="chose_reson">请选择原因</string>
    <string name="type">类型：</string>
    <string name="type_tv">手机</string>
    <string name="goods_yuanjia">商品原价：</string>
    <string name="refund_amount">退款金额</string>
    <string name="refund_amount_money">¥9792.00</string>
    <string name="refund_amount_tv">退款金额包括：押金(￥</string>
    <string name="deposit">6000.00</string>
    <string name="goods_staty">商品状态:</string>
    <string name="inthelease">租赁中</string>
</resources>