<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rv_staty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/goods_staty"
            android:textColor="@color/v_bank"
            android:textSize="@dimen/dp_14" />

        <TextView
            android:id="@+id/myorder_recy_item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/inthelease"
            android:textColor="@color/red"
            android:textSize="@dimen/dp_10" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_90"
        android:layout_below="@id/rv_staty"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/bt_regist_back">

        <ImageView
            android:id="@+id/myorder_recy_item_orderphoto"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@mipmap/icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_toEndOf="@id/myorder_recy_item_orderphoto"
            android:layout_toRightOf="@id/myorder_recy_item_orderphoto">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/myorder_recy_item_ordername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_names"
                    android:textSize="@dimen/dp_13" />

                <RelativeLayout
                    android:id="@+id/rv_product_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myorder_recy_item_ordername"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="1">


                    <TextView
                        android:id="@+id/tv_product_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_info"
                        android:textSize="@dimen/dp_8" />

                    <TextView
                        android:id="@+id/myorder_recy_item_guige"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/tv_product_info"
                        android:layout_toRightOf="@id/tv_product_info"
                        android:text="@string/product_info_tv"
                        android:textSize="@dimen/dp_8" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rv_lease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rv_product_info"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="1">


                    <TextView
                        android:id="@+id/tv_lease_term"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lease_term"
                        android:textSize="@dimen/dp_8" />

                    <TextView
                        android:id="@+id/myorder_recy_item_ordertime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/tv_lease_term"
                        android:layout_toRightOf="@id/tv_lease_term"
                        android:text="@string/lease_month"
                        android:textSize="@dimen/dp_8" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rv_lease"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="1">


                    <TextView
                        android:id="@+id/tv_lease_mons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="押金:"
                        android:textSize="@dimen/dp_8" />

                    <TextView
                        android:id="@+id/myorder_recy_item_yajin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/tv_lease_mons"
                        android:layout_toRightOf="@id/tv_lease_mons"
                        android:text="@string/tv_lease_mons_tv"
                        android:textSize="@dimen/dp_8" />
                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/myorder_recy_item_allmoney"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_45"
        android:layout_below="@+id/rv"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="center"
        android:text="总计：2467:00" />

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_1"
        android:layout_below="@+id/myorder_recy_item_allmoney"
        android:background="@color/bt_regist_back"></View>

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/v"
        android:gravity="center">

        <TextView
            android:id="@+id/lixikefu"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="联系客服"
            android:background="@drawable/bg_shapes"
            android:textSize="@dimen/dp_14" />

        <TextView
            android:id="@+id/closeorder"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="取消订单"
            android:background="@drawable/bg_shapes"
            android:textSize="@dimen/dp_14" />

        <TextView
            android:id="@+id/topay"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_shapes"
            android:text="立即付款"
            android:textSize="@dimen/dp_14" />
    </LinearLayout>

</RelativeLayout>
