<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity">

    <include
        android:id="@+id/inc_regist"
        layout="@layout/common_top_view" />
    <RelativeLayout
        android:id="@+id/rv_im"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:layout_below="@id/inc_regist">

        <ImageView
            android:id="@+id/im_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_im"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20">

        <RelativeLayout
            android:id="@+id/lv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:src="@mipmap/phone" />

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toEndOf="@id/im_ph"
                android:layout_toRightOf="@id/im_ph"
                android:background="@null"
                android:hint="@string/app_hint_phone" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_1"
                android:src="@mipmap/close"
                android:visibility="invisible" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/lv_phone"
            android:background="@color/view_back" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_phone"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20">

        <RelativeLayout
            android:id="@+id/lv_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_code"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:src="@mipmap/code" />

            <EditText
                android:id="@+id/ed_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:maxLength="11"
                android:layout_toEndOf="@id/im_code"
                android:layout_toRightOf="@id/im_code"
                android:background="@null"
                android:hint="@string/app_hint_code" />

            <Button
                android:id="@+id/bt_getcode"
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_30"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_1"
                android:background="@drawable/getcode_shape"
                android:textColor="@color/tv_getcode_color"
                android:text="@string/app_getcode" />

        </RelativeLayout>


        <View
            android:id="@+id/v"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/lv_code"
            android:background="@color/view_back" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_code"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20">

        <RelativeLayout
            android:id="@+id/lv_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:src="@mipmap/password" />

            <EditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toEndOf="@id/im_pass"
                android:layout_toRightOf="@id/im_pass"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/app_hint_password" />

            <ImageView
                android:id="@+id/im_pass_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_1"
                android:src="@mipmap/pass_in" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/lv_pass"
            android:background="@color/view_back" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_password"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_54">

        <Button
            android:id="@+id/bt_immediately_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/present_record_shape"
            android:text="@string/app_regist_text"
            android:textColor="@color/bttext_regist_back"
            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_10"
                android:text="@string/app_regist_button_text" />

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_regist_service_text"
                android:textSize="@dimen/dp_11"
                android:textColor="@color/regist_service_textcolor" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>